2011-07-26  Robert Larice
 * src/include/ngspice.h ,
 * src/spicelib/devices/adms/admst/ngspice.xml :
   swallow unsed variable warnings in adms generated code, upagrade dependencies

2011-07-26  Laurent Lemaitre
 * src/spicelib/devices/adms/admst/ngspice.xml :
   Fixed code generation for ekv by adding definition of min and max and logE.

2011-07-25  Laurent Lemaitre
 * src/spicelib/devices/adms/admst/ngspice.xml :
   fixed handling of expressions used as default value in parameter definition:
     parameter real p=ln(q)

2011-07-25  Robert Larice
 * src/spicelib/devices/adms/admst/ngspice.xml :
   convert K&R function definitions to ansi style
     and declare are debug function `static'

2011-07-24  Robert Larice
 * src/frontend/plotting/plotit.c :
   cleanup getlims() and plug a memory leak

2011-07-24  Robert Larice
 * src/xspice/ipc/ipcstdio.c :
   (int) cast, where size can be expected to be small enough

2011-07-24  Robert Larice
 * src/misc/util.c :
   use size_t

2011-07-24  Robert Larice
 * src/spicelib/parser/inp2m.c :
   avoid incorrect bindnodes when falling back to a 4 node device
     thats a polish of saj's fix from 2003-07-23

2011-07-24  Robert Larice
 * src/spicelib/devices/bsim3soi_dd/b3soiddld.c :
   bug fix, incomplete check for NAN
     did this `TURKEY' try to fool the poor old man's eyes, who is named `Alberto' ?

2011-07-24  Robert Larice
 * src/spicelib/analysis/acan.c ,
 * src/spicelib/analysis/dctran.c ,
 * src/spicelib/analysis/dctrcurv.c ,
 * src/spicelib/analysis/noisean.c :
   polish saj's resume fix, use it for `acan' as well
     saj's fix was applied 2003-07-23 19:36
     avoid (non)-usage of uninitialized variables
   FIXME, get rid of the `evil' number `666', find a better solution

2011-07-24  Robert Larice
 * src/spicelib/analysis/noisean.c :
   bug fix, stepsize in `noisean'

2011-07-23  Robert Larice
 * src/frontend/resource.c ,
 * src/frontend/resource.h :
   use #include <inttypes.h> and size_t for portability
